[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://textures/wall3.png" type="Texture" id=2]
[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://3DModels/Monster/eye.png" type="Texture" id=4]
[ext_resource path="res://textures/key.png" type="Texture" id=5]
[ext_resource path="res://mainMenu.tres" type="Theme" id=6]
[ext_resource path="res://TransitionScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://audio/Frauds of The Night.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 29
extra_spacing_top = 5
extra_spacing_bottom = 21
extra_spacing_char = 22
extra_spacing_space = -26
font_data = ExtResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 38.64
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 24.37
scale = 9.4
scale_random = 0.47
color = Color( 0.235294, 0.141176, 0.262745, 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )

[node name="ColorRect" type="TextureRect" parent="."]
self_modulate = Color( 0.537255, 0.45098, 0.45098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0

[node name="eye" type="Sprite" parent="MarginContainer"]
position = Vector2( 677, 293 )
scale = Vector2( 3.5, 3.5 )
z_index = 1
texture = ExtResource( 4 )
hframes = 4
frame = 2

[node name="key" type="Sprite" parent="MarginContainer"]
position = Vector2( 344, 287 )
scale = Vector2( 4.78125, 4.78125 )
z_index = 1
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="MarginContainer"]
margin_top = 272.0
margin_right = 1024.0
margin_bottom = 327.0
custom_fonts/font = SubResource( 1 )
text = "Welcome HOME"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/margin_right = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = -100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
margin_left = 100.0
margin_right = 924.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 14
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 824.0
margin_bottom = 343.0
custom_constants/margin_right = 200
custom_constants/margin_left = 200

[node name="startButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 200.0
margin_right = 624.0
margin_bottom = 31.0
text = "Start"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 357.0
margin_right = 824.0
margin_bottom = 388.0
custom_constants/margin_right = 270
custom_constants/margin_left = 270

[node name="quitButton" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/MarginContainer2"]
margin_left = 270.0
margin_right = 554.0
margin_bottom = 31.0
text = "Quit"

[node name="eyeDrops" type="Particles2D" parent="."]
position = Vector2( 676, 316 )
amount = 10
process_material = SubResource( 2 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Light2D" type="Light2D" parent="."]

[node name="TransitionScreen" parent="." instance=ExtResource( 7 )]
visible = false

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/MarginContainer/startButton" to="." method="_on_startButton_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/MarginContainer2/quitButton" to="." method="_on_quitButton_pressed"]
[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
